--- a/StudentHub/Client/Shared/NavMenu.razor
+++ b/StudentHub/Client/Shared/NavMenu.razor
@@ -8,6 +8,7 @@
   }
   .nav-item:hover {
     background-color: #333;
+    color: white;
   }
   .nav-item .menu-text {
     margin-left: 0.5rem;
@@ -15,6 +16,7 @@
   }
   .nav-link.active {
     background-color: #0056b3;
+    color: white;
   }
   .icon-menu-arrow {
     background: none;
