--- a/StudentHub/Client/_Imports.razor
+++ b/StudentHub/Client/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using AntDesign
+@using Syncfusion.Blazor
 @using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Authorization
